--- a/app/screens/kv/inicio.kv
+++ b/app/screens/kv/inicio.kv
@@ -21,11 +21,21 @@
                 size_hint_y: None
                 height: 10
 
-            Image:
-                source: './app/resources/img/cam.png'
-                size_hint: (None, None)
-                size: (200, 200)
-                pos_hint: {"center_x": .5}
+            FloatLayout:
+                Image:
+                    source: './app/resources/img/cam.png'
+                    size_hint: (None, None)
+                    size: (200, 200)
+                    pos_hint: {"center_x": .5, "center_y": .5}
+
+                MDRaisedButton:
+                    text: "Fabricar placa"
+                    size_hint: None, None
+                    size: dp(150), dp(50)
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    md_bg_color: [1, 1, 1, 0.5]  # Botón casi transparente
+                    text_color: [0, 0, 0, 1]
+                    on_press: app.root.current = 'calibrar'
 
             MDFillRoundFlatIconButton:
                 text: "Calibrar"    
@@ -34,20 +44,16 @@
                 size_hint: None, None
                 size: dp(200), dp(50)  
                 pos_hint: {"center_x": 0.5}  
-                text_color: [0, 0, 0, 1]  #
+                text_color: [0, 0, 0, 1]
                 md_bg_color: [1, 0.5, 0, 1]
-
 
         MDBoxLayout:
             size_hint_y: None
             height: "48dp"
             md_bg_color: [0.855, 0.435, 0.0, 1.0]
-            
+
             MDLabel:
                 text: root.current_time
                 halign: "left"
                 valign: "middle"
                 color: [0, 0, 0, 1]
-
-
-
