--- a/app/screens/kv/calibrar.kv
+++ b/app/screens/kv/calibrar.kv
@@ -6,7 +6,7 @@
         # Barra superior
         MDTopAppBar:
             id: toolbar
-            title: "Placa de identificación para mascotas"
+            title: "Placa de identificacion para mascotas"
             use_overflow: True
             left_action_items: [["arrow-left-bold", lambda x: root.go_back(), "INICIO"]]
             elevation: 0
@@ -14,14 +14,13 @@
 
         # Recuadro de imagen o stream
         FloatLayout:
-            size_hint_y: 0.4
-            padding: 10
+            size_hint_y: 0.5
+            padding: 20
 
-            AsyncImage:
+            Image:
                 id: camera_image
-                source: './app/resources/img/cam.png'  # Imagen predeterminada
                 size_hint: (None, None)
-                size: (200, 200)
+                size: (400, 300)
                 pos_hint: {"center_x": 0.5, "center_y": 0.5}
 
         # Contenedor para los botones de movimiento de ejes X e Y
@@ -38,6 +37,7 @@
                 MDFloatingActionButton:
                     icon: "arrow-up"
                     on_release: root.move_y_positive()
+                    elevation: 0
                     pos_hint: {"center_x": 0.4, "center_y": 0.8}
                     text_color: [0, 0, 0, 1]  
                     md_bg_color: [1, 0.5, 0, 1]
@@ -45,6 +45,7 @@
                 MDFloatingActionButton:
                     icon: "arrow-left"
                     on_release: root.move_x_negative()
+                    elevation: 0
                     pos_hint: {"center_x": 0.2, "center_y": 0.5}
                     text_color: [0, 0, 0, 1]  
                     md_bg_color: [1, 0.5, 0, 1]
@@ -52,6 +53,7 @@
                 MDFloatingActionButton:
                     icon: "arrow-right"
                     on_release: root.move_x_positive()
+                    elevation: 0
                     pos_hint: {"center_x": 0.6, "center_y": 0.5}
                     text_color: [0, 0, 0, 1]  
                     md_bg_color: [1, 0.5, 0, 1]
@@ -59,6 +61,7 @@
                 MDFloatingActionButton:
                     icon: "arrow-down"
                     on_release: root.move_y_negative()
+                    elevation: 0
                     pos_hint: {"center_x": 0.4, "center_y": 0.2}
                     text_color: [0, 0, 0, 1]  
                     md_bg_color: [1, 0.5, 0, 1]
@@ -71,6 +74,7 @@
                 MDFloatingActionButton:
                     icon: "arrow-up-bold"
                     on_release: root.move_z_positive()
+                    elevation: 0
                     pos_hint: {"center_x": 0.4, "center_y": 0.7}
                     text_color: [0, 0, 0, 1]  
                     md_bg_color: [1, 0.5, 0, 1]
@@ -78,6 +82,7 @@
                 MDFloatingActionButton:
                     icon: "arrow-down-bold"
                     on_release: root.move_z_negative()
+                    elevation: 0
                     pos_hint: {"center_x": 0.4, "center_y": 0.3}
                     text_color: [0, 0, 0, 1]  
                     md_bg_color: [1, 0.5, 0, 1]
@@ -85,6 +90,7 @@
                 MDRaisedButton:
                     id: dropdown_button
                     text: "# Placa"
+                    elevation: 0
                     text_color: [0, 0, 0, 1]  
                     md_bg_color: [1, 0.5, 0, 1]
                     pos_hint: {"center_x": 0.7, "center_y": 0.7}
@@ -93,6 +99,7 @@
                 MDRaisedButton:
                     text: "Guardar"
                     text_color: [0, 0, 0, 1]  
+                    elevation: 0
                     md_bg_color: [1, 0.5, 0, 1]
                     pos_hint: {"center_x": 0.7, "center_y": 0.3}
                     on_release: root.save_settings()
