--- a/app/screens/kv/calibrar.kv
+++ b/app/screens/kv/calibrar.kv
@@ -1,183 +1,219 @@
 <CalibrarScreen>:
     name: 'calibrar'
-    MDBoxLayout:
-        orientation: 'vertical'
-        
-        # Barra superior
-        MDTopAppBar:
-            id: toolbar
-            title: "Placa de identificacion para mascotas"
-            use_overflow: True
-            left_action_items: [["arrow-left-bold", lambda x: root.go_back(), "INICIO"]]
-            elevation: 0
-            md_bg_color: [0.855, 0.435, 0.0, 1.0]
-        
-        # Recuadro de imagen o stream
-        FloatLayout:
-            size_hint_y: 0.5
-            padding: 20
 
-            Image:
-                id: camera_image
-                size_hint: (1.2, 1.2)
-                #size: (400, 300)
-                pos_hint: {"center_x": 0.5, "center_y": 0.4}
+    MDNavigationLayout:
 
-        # contenedor label valores actuales 
-        BoxLayout:
-            size_hint_y: 0.2
-            padding: 10
-            spacing: 10
+        MDScreenManager:
 
-            MDCard:
-                size_hint_y: None
-                height: "100dp"
-                padding: 10
-                md_bg_color: [0.95, 0.95, 0.95, 1.0]
-                    
-                BoxLayout:
+            MDScreen:
+                MDBoxLayout:
                     orientation: 'vertical'
-                    spacing: 10
 
-                    MDLabel:
-                        text: "Posición tag"
-                        font_size: '20sp'
-                        halign: 'center'
-                        theme_text_color: "Secondary"
-                        bold: True
+                    # Barra superior
+                    MDTopAppBar:
+                        id: toolbar
+                        title: "Placa de identificación para mascotas"
+                        use_overflow: True
+                        left_action_items: [["arrow-left-bold", lambda x: root.go_back(), "INICIO"]]
+                        right_action_items:[['menu', lambda x: nav_drawer.set_state("open")]]
+                        elevation: 0
+                        md_bg_color: [0.855, 0.435, 0.0, 1.0]
 
-                    MDLabel:
-                        text: "X: " + str(root.selected_tag_location[0])
-                        halign: 'center'
-                        
-                    MDLabel:
-                        text: "Y: " + str(root.selected_tag_location[1])
-                        halign: 'center'
-                        
-                    MDLabel:
-                        text: "Z: " + str(root.selected_tag_location[2])
-                        halign: 'center'
+                    # Recuadro de imagen o stream
+                    FloatLayout:
+                        size_hint_y: 0.5
+                        padding: 20
 
-            # Tarjeta para las nuevas etiquetas
-            MDCard:
-                size_hint_y: None
-                height: "100dp"
-                padding: 10
-                md_bg_color: [0.95, 0.95, 0.95, 1.0]
+                        Image:
+                            id: camera_image
+                            size_hint: (1.2, 1.2)
+                            pos_hint: {"center_x": 0.5, "center_y": 0.4}
 
-                BoxLayout:
-                    orientation: 'vertical'
-                    spacing: 10
+                    # Contenedor de valores actuales
+                    BoxLayout:
+                        size_hint_y: 0.2
+                        padding: 10
+                        spacing: 10
 
-                    MDLabel:
-                        text: "Posición actual"
-                        font_size: '20sp'
-                        halign: 'center'
-                        theme_text_color: "Secondary"
-                        bold: True
+                        MDCard:
+                            size_hint_y: None
+                            height: "100dp"
+                            padding: 10
+                            md_bg_color: [0.95, 0.95, 0.95, 1.0]
 
-                    MDLabel:
-                        text: "X: " + str(root.new_location[0])
-                        halign: 'center'
-                        
-                    MDLabel:
-                        text: "Y: " + str(root.new_location[1])
-                        halign: 'center'
-                        
-                    MDLabel:
-                        text: "Z: " + str(root.new_location[2])
-                        halign: 'center'
+                            BoxLayout:
+                                orientation: 'vertical'
+                                spacing: 10
 
+                                MDLabel:
+                                    text: "Posición tag"
+                                    font_size: '20sp'
+                                    halign: 'center'
+                                    theme_text_color: "Secondary"
+                                    bold: True
 
-        # Contenedor para los botones de movimiento de ejes X e Y
-        BoxLayout:
-            orientation: 'horizontal'
-            size_hint_y: 0.3
-            padding: 10
-            spacing: 10
+                                MDLabel:
+                                    text: "X: " + str(root.selected_tag_location[0])
+                                    halign: 'center'
 
-            FloatLayout:
-                size_hint_x: 0.6
-                padding: 10
+                                MDLabel:
+                                    text: "Y: " + str(root.selected_tag_location[1])
+                                    halign: 'center'
 
-                MDFloatingActionButton:
-                    icon: "arrow-up"
-                    on_release: root.move_y_positive()
-                    elevation: 0
-                    pos_hint: {"center_x": 0.4, "center_y": 0.8}
-                    text_color: [0, 0, 0, 1]  
-                    md_bg_color: [1, 0.5, 0, 1]
+                                MDLabel:
+                                    text: "Z: " + str(root.selected_tag_location[2])
+                                    halign: 'center'
 
-                MDFloatingActionButton:
-                    icon: "arrow-left"
-                    on_release: root.move_x_negative()
-                    elevation: 0
-                    pos_hint: {"center_x": 0.2, "center_y": 0.5}
-                    text_color: [0, 0, 0, 1]  
-                    md_bg_color: [1, 0.5, 0, 1]
+                        # Tarjeta para las nuevas etiquetas
+                        MDCard:
+                            size_hint_y: None
+                            height: "100dp"
+                            padding: 10
+                            md_bg_color: [0.95, 0.95, 0.95, 1.0]
 
-                MDFloatingActionButton:
-                    icon: "arrow-right"
-                    on_release: root.move_x_positive()
-                    elevation: 0
-                    pos_hint: {"center_x": 0.6, "center_y": 0.5}
-                    text_color: [0, 0, 0, 1]  
-                    md_bg_color: [1, 0.5, 0, 1]
+                            BoxLayout:
+                                orientation: 'vertical'
+                                spacing: 10
 
-                MDFloatingActionButton:
-                    icon: "arrow-down"
-                    on_release: root.move_y_negative()
-                    elevation: 0
-                    pos_hint: {"center_x": 0.4, "center_y": 0.2}
-                    text_color: [0, 0, 0, 1]  
-                    md_bg_color: [1, 0.5, 0, 1]
+                                MDLabel:
+                                    text: "Posición actual"
+                                    font_size: '20sp'
+                                    halign: 'center'
+                                    theme_text_color: "Secondary"
+                                    bold: True
 
-            # Contenedor para los botones del eje Z y otros botones
-            FloatLayout:
-                size_hint_x: 0.4
-                padding: 10
+                                MDLabel:
+                                    text: "X: " + str(root.new_location[0])
+                                    halign: 'center'
 
-                MDFloatingActionButton:
-                    icon: "arrow-up-bold"
-                    on_release: root.move_z_positive()
-                    elevation: 0
-                    pos_hint: {"center_x": 0.4, "center_y": 0.7}
-                    text_color: [0, 0, 0, 1]  
-                    md_bg_color: [1, 0.5, 0, 1]
+                                MDLabel:
+                                    text: "Y: " + str(root.new_location[1])
+                                    halign: 'center'
 
-                MDFloatingActionButton:
-                    icon: "arrow-down-bold"
-                    on_release: root.move_z_negative()
-                    elevation: 0
-                    pos_hint: {"center_x": 0.4, "center_y": 0.3}
-                    text_color: [0, 0, 0, 1]  
-                    md_bg_color: [1, 0.5, 0, 1]
+                                MDLabel:
+                                    text: "Z: " + str(root.new_location[2])
+                                    halign: 'center'
 
-                MDRaisedButton:
-                    id: dropdown_button
-                    text: "# Placa"
-                    elevation: 0
-                    text_color: [0, 0, 0, 1]  
-                    md_bg_color: [1, 0.5, 0, 1]
-                    pos_hint: {"center_x": 0.7, "center_y": 0.7}
-                    on_release: root.show_dropdown()
+                    # Contenedor para los botones de movimiento de ejes X e Y
+                    BoxLayout:
+                        orientation: 'horizontal'
+                        size_hint_y: 0.3
+                        padding: 10
+                        spacing: 10
 
-                MDRaisedButton:
-                    text: "Guardar"
-                    text_color: [0, 0, 0, 1]  
-                    elevation: 0
-                    md_bg_color: [1, 0.5, 0, 1]
-                    pos_hint: {"center_x": 0.7, "center_y": 0.3}
-                    on_release: root.save_settings()
+                        FloatLayout:
+                            size_hint_x: 0.6
+                            padding: 10
 
-        # Barra inferior para mostrar la hora
-        MDBoxLayout:
-            size_hint_y: None
-            height: "48dp"
-            md_bg_color: [0.855, 0.435, 0.0, 1.0]
-            
-            MDLabel:
-                text: root.current_time
-                halign: "left"
-                valign: "middle"
-                color: [0, 0, 0, 1]
+                            MDFloatingActionButton:
+                                icon: "arrow-up"
+                                on_release: root.move_y_positive()
+                                elevation: 0
+                                pos_hint: {"center_x": 0.4, "center_y": 0.8}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                            MDFloatingActionButton:
+                                icon: "arrow-left"
+                                on_release: root.move_x_negative()
+                                elevation: 0
+                                pos_hint: {"center_x": 0.2, "center_y": 0.5}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                            MDFloatingActionButton:
+                                icon: "arrow-right"
+                                on_release: root.move_x_positive()
+                                elevation: 0
+                                pos_hint: {"center_x": 0.6, "center_y": 0.5}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                            MDFloatingActionButton:
+                                icon: "arrow-down"
+                                on_release: root.move_y_negative()
+                                elevation: 0
+                                pos_hint: {"center_x": 0.4, "center_y": 0.2}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                        # Contenedor para los botones del eje Z y otros botones
+                        FloatLayout:
+                            size_hint_x: 0.4
+                            padding: 10
+
+                            MDFloatingActionButton:
+                                icon: "arrow-up-bold"
+                                on_release: root.move_z_positive()
+                                elevation: 0
+                                pos_hint: {"center_x": 0.4, "center_y": 0.7}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                            MDFloatingActionButton:
+                                icon: "arrow-down-bold"
+                                on_release: root.move_z_negative()
+                                elevation: 0
+                                pos_hint: {"center_x": 0.4, "center_y": 0.3}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                            MDRaisedButton:
+                                id: dropdown_button
+                                text: "# Placa"
+                                elevation: 0
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+                                pos_hint: {"center_x": 0.7, "center_y": 0.7}
+                                on_release: root.show_dropdown()
+
+                            MDRaisedButton:
+                                text: "Guardar"
+                                text_color: [0, 0, 0, 1]  
+                                elevation: 0
+                                md_bg_color: [1, 0.5, 0, 1]
+                                pos_hint: {"center_x": 0.7, "center_y": 0.3}
+                                on_release: root.save_settings()
+
+                    # Barra inferior para mostrar la hora
+                    MDBoxLayout:
+                        size_hint_y: None
+                        height: "48dp"
+                        md_bg_color: [0.855, 0.435, 0.0, 1.0]
+
+                        MDLabel:
+                            text: root.current_time
+                            halign: "left"
+                            valign: "middle"
+                            color: [0, 0, 0, 1]
+
+        # Menú de navegación lateral
+        MDNavigationDrawer:
+            id: nav_drawer
+            anchor: 'right'
+            radius: (0, 16, 16, 0)
+
+            MDNavigationDrawerMenu:
+
+                MDNavigationDrawerHeader:
+                    title: "Configuración"
+                    title_color: "#4a4939"
+                    text: "Header text"
+                    spacing: "4dp"
+                    padding: "12dp", 0, 0, "56dp"
+
+                MDNavigationDrawerLabel:
+                    text: "conf"
+
+                OneLineIconListItem:
+                    text: "Ir a home"
+                    IconLeftWidget:
+                        icon: "home"
+                        on_release: root.go_home()
+
+                OneLineIconListItem:
+                    text: "Restablecer coordenadas"
+                    IconLeftWidget:
+                        icon: "restore"
+                        #on_release: root.reset_coordinates()               
+
