--- a/app/screens/kv/calibrar.kv
+++ b/app/screens/kv/calibrar.kv
@@ -26,7 +26,7 @@
 
                         Image:
                             id: camera_image
-                            size_hint: (1.2, 1.2)
+                            size_hint: (1, 1)
                             pos_hint: {"center_x": 0.5, "center_y": 0.4}
 
                     # Contenedor de valores actuales
@@ -102,7 +102,7 @@
                         spacing: 10
 
                         FloatLayout:
-                            size_hint_x: 0.6
+                            size_hint_x: 0.5
                             padding: 10
 
                             MDFloatingActionButton:
@@ -139,14 +139,38 @@
 
                         # Contenedor para los botones del eje Z y otros botones
                         FloatLayout:
-                            size_hint_x: 0.4
+                            size_hint_x: 0.5
                             padding: 10
+
+                            MDFloatingActionButton:
+                                icon: "home"
+                                on_release: root.go_home()
+                                elevation: 0
+                                pos_hint: {"center_x": 0, "center_y": 0.8}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                            MDFloatingActionButton:
+                                icon: "tray-arrow-down"
+                                #on_release: root.go_home()
+                                elevation: 0
+                                pos_hint: {"center_x": 0, "center_y": 0.5}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
+
+                            MDFloatingActionButton:
+                                icon: "stop"
+                                #on_release: root.move_z_positive()
+                                elevation: 0
+                                pos_hint: {"center_x": 0, "center_y": 0.2}
+                                text_color: [0, 0, 0, 1]  
+                                md_bg_color: [1, 0.5, 0, 1]
 
                             MDFloatingActionButton:
                                 icon: "arrow-up-bold"
                                 on_release: root.move_z_positive()
                                 elevation: 0
-                                pos_hint: {"center_x": 0.4, "center_y": 0.7}
+                                pos_hint: {"center_x": 0.35, "center_y": 0.7}
                                 text_color: [0, 0, 0, 1]  
                                 md_bg_color: [1, 0.5, 0, 1]
 
@@ -154,7 +178,7 @@
                                 icon: "arrow-down-bold"
                                 on_release: root.move_z_negative()
                                 elevation: 0
-                                pos_hint: {"center_x": 0.4, "center_y": 0.3}
+                                pos_hint: {"center_x": 0.35, "center_y": 0.3}
                                 text_color: [0, 0, 0, 1]  
                                 md_bg_color: [1, 0.5, 0, 1]
 
