--- a/app/screens/kv/calibrar.kv
+++ b/app/screens/kv/calibrar.kv
@@ -98,6 +98,7 @@
                     BoxLayout:
                         orientation: 'horizontal'
                         size_hint_y: 0.3
+                        #transition: NoTransition()
                         padding: 10
                         spacing: 10
 
@@ -189,7 +190,7 @@
                                 text_color: [0, 0, 0, 1]  
                                 md_bg_color: [1, 0.5, 0, 1]
                                 pos_hint: {"center_x": 0.7, "center_y": 0.7}
-                                on_release: root.show_dropdown()
+                                on_release: root.show_menu(self)
 
                             MDRaisedButton:
                                 text: "Guardar"
