--- a/app/screens/kv/calibrar.kv
+++ b/app/screens/kv/calibrar.kv
@@ -28,6 +28,15 @@
                             id: camera_image
                             size_hint: (1, 1)
                             pos_hint: {"center_x": 0.5, "center_y": 0.4}
+                            #on_touch_up: root.on_touch_up(*args)
+
+                                                    # Botón para alternar zoom
+                        MDFloatingActionButton:
+                            icon: "magnify"
+                            size: dp(40), dp(40)
+                            pos_hint: {"right": 1, "y": 0}
+                            md_bg_color: [1, 0.5, 0, 1]
+                            on_touch_down: root.camera_controller.toggle_zoom() 
 
                     # Contenedor de valores actuales
                     BoxLayout:
@@ -161,7 +170,7 @@
 
                             MDFloatingActionButton:
                                 icon: "stop"
-                                #on_release: root.move_z_positive()
+                                on_release: root.CNCController.stop_all()
                                 elevation: 0
                                 pos_hint: {"center_x": 0, "center_y": 0.2}
                                 text_color: [0, 0, 0, 1]  
