corrección ventana de dialogo

--- a/app/screens/kv/calibrar.kv
+++ b/app/screens/kv/calibrar.kv
@@ -282,3 +282,4 @@
         input_filter: 'float'
         helper_text: "Entre 0 y 200 mm"
         helper_text_mode: "on_focus"
+        input_type: "number"  
