--- a/app/screens/kv/calibrar.kv
+++ b/app/screens/kv/calibrar.kv
@@ -256,7 +256,7 @@
                     text: "Modificar Recorrido"
                     IconLeftWidget:
                         icon: "pencil"
-                        #on_release: root.modify_travel_distance()     
+                        on_release: root.modify_travel_distance()     
 
                 OneLineIconListItem:
                     text: "Dispensar Placa"
